--- a/style/moobile_core.css
+++ b/style/moobile_core.css
@@ -1786,5 +1786,9 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
     outline: 0 !important;
 }
 
+#categoryquestions .checkbox {
+    width: auto;
+}
+
 /** Custom CSS **/
 [[setting:customcss]]
