--- a/style/moobile_core.css
+++ b/style/moobile_core.css
@@ -312,9 +312,7 @@ input[type="hidden"] {
 .mod-indent-1, .mod-indent {
     margin-left:0;
 }
-li a.dimmed span {
-    color: #aaa !important;
-}
+
 .course-content .current {
     background: none;
 }
@@ -1788,6 +1786,38 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
 
 #categoryquestions .checkbox {
     width: auto;
+}
+
+.generalbox, .box {
+    text-align: center;
+}
+
+#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo .separator {
+    border-left: 1px dotted #333333;
+}
+
+#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo .info.release {
+    border-radius: 10px 10px 10px 10px;
+    margin-right: 10px;
+    padding: 5px 10px;
+}
+
+#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo span, #page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo a {
+    padding-right: 1em;
+    line-height: 1.8;
+}
+
+.path-mod-resource .resourcecontent {
+    text-align: center;
+}
+
+.path-mod-resource .resourcedetails {
+    font-size: 0.8em;
+}
+
+.resourcelinkdetails {
+    font-size: 0.8em;
+    padding-left: 45px;
 }
 
 /** Custom CSS **/
