--- a/style/moobile_core.css
+++ b/style/moobile_core.css
@@ -345,7 +345,7 @@ input[type="hidden"] {
 .sitetopic .section .activity .contentafterlink,
 .course-content .section .activity .availabilityinfo,
 .course-content .section .activity .contentafterlink {
-    padding-left: 45px;
+    padding-left: 32px;
     padding-right: 60px;
     margin-left: 0;
     margin-right: 0;
@@ -375,9 +375,9 @@ input[type="hidden"] {
     max-width: inherit;
     max-height: inherit;
 }
-.course-content .section .activity img.activityicon {
+/*.course-content .section .activity img.activityicon {
     margin-top: -.5em;
-}
+}*/
 li.activity.ui-li-static span, li.activity div.availabilityinfo {
     white-space: normal;
 }
@@ -1547,11 +1547,11 @@ a.comment-link, .block_comments a.showcommentsnonjs, .block_comments .comment-ar
 .ui-header .ui-navbar {
     background:             #eee;
     background-image: -moz-linear-gradient(top,
-        rgba(255, 255, 255, 0.9),
-        rgba(255, 255, 255, 0.7));
+        rgba(255, 255, 255, 0.3),
+        rgba(255, 255, 255, 0.1));
     background-image: -webkit-gradient(linear,left top,left bottom,
-        color-stop(0,       rgba(255, 255, 255, 0.9)),
-        color-stop(1,       rgba(255, 255, 255, 0.7)));
+        color-stop(0,       rgba(255, 255, 255, 0.3)),
+        color-stop(1,       rgba(255, 255, 255, 0.1)));
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#fdfdfd', EndColorStr='#eeeeee')";
     /* Fallback for web browsers that doesn't support RGBa */
     background-color: rgb(255, 255, 255) transparent !important;
@@ -1844,7 +1844,7 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
 
 .resourcelinkdetails {
     font-size: 0.8em;
-    padding-left: 45px;
+    padding-left: 32px;
 }
 
 .mform .fdescription.required {
@@ -1855,7 +1855,6 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
     color: rgb(255, 255, 255) transparent !important;
     color: rgba(255, 255, 255, 0.6) !important;
 }
-
 .answer .control label.ui-btn-active .ui-btn-text span {
     color: rgb(255, 255, 255) transparent !important;
     color: rgba(255, 255, 255, 0.1) !important;
@@ -1866,8 +1865,8 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
     width: 100%;
 }
 
-.unlist, .unlist li, .inline-list, .inline-list li, .block .list, .block .list li, .sitetopic .section li.activity, .course-content .section li.activity, .tabtree li {
-    padding: 5px;
+.ui-header .ui-title, .ui-footer .ui-title { 
+   margin: .6em 10% .8em; 
 }
 
 /** Custom CSS **/
