--- a/style/moobile_core.css
+++ b/style/moobile_core.css
@@ -1598,22 +1598,23 @@ a.comment-link, .block_comments a.showcommentsnonjs, .block_comments .comment-ar
     border-radius: .4em .4em .4em .4em;
     border: 1px solid #ccc !important;
     border-top: 1px solid #aaa !important; */
-	border-width: 1px !important;
-	border-style: solid !important;
+    border-width: 1px !important;
+    border-style: solid !important;
     /* Fallback for web browsers that doesn't support RGBa */
     border-color: rgb(255, 255, 255) transparent !important;
     /* RGBa */
     border-color: rgba(255, 255, 255, 0.45) !important;		
-    margin: .4em;
-    margin-left: .4em;
-    margin-right: 0em;
+    margin-left: .3em;
+    margin-top: .3em;
+    margin-bottom: .3em;
+    margin-right: .3em;
     /*-webkit-box-shadow: 1px 1px 1px #fff, inset 1px 1px 1px #eee;
     -moz-box-shadow: 1px 1px 1px #fff, inset 1px 1px 1px #eee;
     box-shadow: 1px 1px 1px #fff, inset 1px 1px 1px #eee;
     text-shadow: 0 1px 1px #FFFFFF; */
 }
 .ui-header .ui-navbar li:last-child .ui-btn {
-    margin-right: .4em;
+    margin-right: .3em;
 }
 .ui-header .ui-navbar li .ui-btn .ui-btn-inner {
     padding-bottom: 0.6em;
@@ -1875,6 +1876,11 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
 
 .green, .notifysuccess {
     color: #eeeeee;
+}
+
+.headerlinks {
+    float: left;
+    padding: 6px 0px 0px 6px;
 }
 
 /** Custom CSS **/
