--- a/style/moobile_core.css
+++ b/style/moobile_core.css
@@ -1888,5 +1888,9 @@ div.tablets, #sliderdiv, .has-myblocks .jsetsbar {
     border-width: 0px;
 }
 
+.resourceworkaround, .urlworkaround, .modified {
+    color: inherit;
+}
+
 /** Custom CSS **/
 [[setting:customcss]]
