--- a/javascript/jquery.bxslider/jquery.bxslider.css
+++ b/javascript/jquery.bxslider/jquery.bxslider.css
@@ -16,13 +16,13 @@
 
 .bx-wrapper {
 	position: relative;
-	margin: 0 0 60px;
+	margin: 0 auto 60px;
 	padding: 0;
 	*zoom: 1;
 }
 
 .bx-wrapper img {
-	width: 100%;
+	max-width: 100%;
 	display: block;
 }
 
